[project]
name = "nf4-dequantize"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.49.2",
    "peft>=0.18.1",
    "torch>=2.10.0",
    "transformers>=5.3.0",
    "unsloth>=2026.3.6",
    "triton; sys_platform == 'linux'",
]
